# PFE2018

./: init.config
Bocop-2.1.0-linux-src/: CHANGELOG  CMakeLists.txt  INSTALL  INSTALL-macos.txt  INSTALL-windows.txt  LICENSE  README  TROUBLESHOOTING.txt
Bocop-2.1.0-linux-src/CMakeModules/: BuildADOLC.cmake  BuildIPOPT.cmake  FindADOLC.cmake  FindIPOPT.cmake
Bocop-2.1.0-linux-src/core/: main.cpp
Bocop-2.1.0-linux-src/core/headers/: BocopDefinition.hpp  BocopInterpolation.hpp  BocopOptimize.hpp  BocopProblem.hpp  GenerationVariable.hpp  StartingPoint.hpp  common.hpp  functions.hpp  header_boundarycond  header_criterion  header_dynamics  header_measure  header_pathcond  header_postProcessing  header_preProcessing  parametrizedcontrol.hpp  postProcessing.hpp  preProcessing.hpp  publicTools.hpp  tools.hpp
Bocop-2.1.0-linux-src/core/sources/IO/: readDefinition.cpp  writeDefinition.cpp  writeSolution.cpp
Bocop-2.1.0-linux-src/core/sources/disc/: computeDynConstraints.tpp  discTools.tpp
Bocop-2.1.0-linux-src/core/sources/interpolation/: BocopInterpolation.cpp  BocopLinearInterpolation.cpp  BocopSplinesInterpolation.cpp
Bocop-2.1.0-linux-src/core/sources/ipopt/: BocopDefinition.cpp  BocopOptimize.cpp  BocopOptimizeBatch.cpp  BocopOptimizeSingle.cpp
Bocop-2.1.0-linux-src/core/sources/nlp/: BocopProblem.cpp  errorToObservation.tpp  evalNLPBounds.cpp  evalNLPFunctions.tpp  generateTapes.cpp  overloaded_from_nlp.cpp  publicTools.cpp  tools.cpp
Bocop-2.1.0-linux-src/core/sources/optionalfunctions/: measure.tpp  postProcessing.cpp  preProcessing.cpp
Bocop-2.1.0-linux-src/core/sources/startingpoint/: GenerationVariable.cpp  StartFromInitFile.cpp  StartFromPreviousSolution.cpp  StartingPoint.cpp
Bocop-2.1.0-linux-src/examples/beam/: boundarycond.tpp  build.sh  criterion.tpp  dynamics.tpp  pathcond.tpp  problem.bounds  problem.def.backup  problem.sol  problem.sol.backup
Bocop-2.1.0-linux-src/examples/bioreactor/bioreactor_1day_periodic/: dynamics.tpp  ipopt.opt  problem.bounds  problem.def  problem.sol  problem.sol.backup
Bocop-2.1.0-linux-src/examples/bioreactor/bioreactor_Ndays/: boundarycond.tpp  criterion.tpp  dependencies.hpp  dependencies.tpp  ipopt.opt  pathcond.tpp  problem.bounds  problem.constants  problem.def  problem.sol
Bocop-2.1.0-linux-src/examples/contrast/: boundarycond.tpp  criterion.tpp  dynamics.tpp  ipopt.opt  pathcond.tpp  problem.bounds  problem.constants  problem.def  problem.sol
Bocop-2.1.0-linux-src/examples/contrast/init/: control.0.init  state.0.init  state.1.init  state.2.init  state.3.init  state.4.init
Bocop-2.1.0-linux-src/examples/default/: build.sh  dynamics.tpp  problem.bounds  problem.sol
Bocop-2.1.0-linux-src/examples/default/init/: constant.init.template  control.0.init  linear.init.template  optimvars.init.template  spline.init.template  state.0.init
Bocop-2.1.0-linux-src/examples/default/model/: external_function_with_Tdouble.tpp  external_function_without_Tdouble.cpp
Bocop-2.1.0-linux-src/examples/fuller/: boundarycond.tpp  criterion.tpp  dynamics.tpp  pathcond.tpp  problem.bounds  problem.constants  problem.def.backup  problem.sol  problem.sol.backup
Bocop-2.1.0-linux-src/examples/fuller/init/: control.0.init  state.0.init  state.1.init
Bocop-2.1.0-linux-src/examples/goddard/: bocop  boundarycond.tpp  criterion.tpp  dependencies.hpp  dependencies.tpp  dynamics.tpp  pathcond.tpp  problem.bounds  problem.constants  problem.def  problem.sol  result.out
Bocop-2.1.0-linux-src/examples/goddard/batch-C/: C-5.000000e-01.sol  C-6.000000e-01.sol  C-7.000000e-01.sol  C-8.000000e-01.sol  C-8.000000e-01.sol.backup
Bocop-2.1.0-linux-src/examples/goddard/export/: acceleration_u.export  discretization_times.export  drag_minus_C.export  mass.export  mass_adjoint_state.export  parameters.export  position.export  position_adjoint_state.export  speed.export  speed_adjoint_state.export  stage_acceleration_u.export  stage_times.export
Bocop-2.1.0-linux-src/examples/goddard/init/: control.0.init  (+3 more)
Bocop-2.1.0-linux-src/examples/harvest/: boundarycond.tpp  criterion.tpp  dynamics.tpp  ipopt.opt  pathcond.tpp  problem.bounds  problem.constants  problem.def.backup  problem.sol  problem.sol.backup
Bocop-2.1.0-linux-src/examples/heat/: boundarycond.tpp  criterion.tpp  dynamics.tpp  heatgraph.sci  pathcond.tpp  problem.bounds  problem.constants  problem.def  problem.sol  problem.sol.backup
Bocop-2.1.0-linux-src/examples/leukemia/: dynamics.tpp  pathcond.tpp  problem.constants  problem.def  problem.sol  problem.sol.backup  visu_hemato_fig4.m  visu_hemato_fig5.m
Bocop-2.1.0-linux-src/examples/pendulum/: boundarycond.tpp  criterion.tpp  dynamics.tpp  pathcond.tpp  problem.bounds  problem.constants  problem.def  problem.def.backup  problem.sol  problem.sol.backup
Bocop-2.1.0-linux-src/examples/regulator/: boundarycond.tpp  criterion.tpp  dynamics.tpp  pathcond.tpp  problem.bounds  problem.def  problem.sol  problem.sol.backup
Bocop-2.1.0-linux-src/examples/robbins/: boundarycond.tpp  criterion.tpp  dynamics.tpp  pathcond.tpp  problem.bounds  problem.constants  problem.def  problem.sol  problem.sol.backup
Bocop-2.1.0-linux-src/examples/swimmer/: boundarycond.tpp  criterion.tpp  dynamics.tpp  ipopt.opt  pathcond.tpp  problem.bounds  problem.def  problem.def.backup  problem.sol
Bocop-2.1.0-linux-src/examples/vanderpol/: boundarycond.tpp  criterion.tpp  dynamics.tpp  ipopt.opt  problem.bounds  problem.def  problem.sol  problem.sol.backup
Bocop-2.1.0-linux-src/qtgui/: about.cpp  bocop_save_definition.cpp  bocop_save_definition.hpp  bocop_solution.cpp  bocop_solution.hpp  build_and_run.cpp  canvaspicker.cpp  canvaspicker.hpp  definition.cpp  discretization.cpp  initialization.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_and_open.cpp  optimization.cpp  resources_bocop.qrc  save_problem.cpp  scalepicker.cpp  scalepicker.h  visualization.cpp
Bocop-2.1.0-linux-src/scripts/benchmark/: benchmark.list.csv  benchmark.py
Bocop-2.1.0-linux-src/scripts/matlab/: readsolfile.m  readsolfile2.m  visualization_tree.m
(+2307 files in other folders)
